# pokemon-champions-matrix

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Formula/: pc.rb
examples/: my-team.txt  opponents.txt
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/calc/: damage.rs  mod.rs  modifiers.rs  speed.rs  stats.rs
src/data/: aliases.rs  mod.rs  move_repository.rs  pokeapi.rs  pokemon_repository.rs
src/matrix/: engine.rs  mod.rs  showdown.rs  tui.rs
src/model/: battle.rs  field.rs  mod.rs  move_data.rs  nature.rs  pokemon.rs  stats.rs  type_chart.rs
tests/: cli.rs
tests/fixtures/pokeapi/move/: shadow-ball.json  sludge-bomb.json
tests/fixtures/pokeapi/pokemon/: aegislash-shield.json  venusaur.json
