[package]
name = "pc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
serde_json = "1"
