[package]
name = "pc"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Mario-SO"]
description = "Terminal matchup matrix for Pokemon Champions and VGC planning"
repository = "https://github.com/Mario-SO/pokemon-champions-matrix"
homepage = "https://github.com/Mario-SO/pokemon-champions-matrix"
readme = "README.md"
license = "MIT"
keywords = ["pokemon", "vgc", "tui", "cli", "matrix"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
